tests/ui/errors/snapshots/parse_invalid_token_in_pattern.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Syntax error
   ╭─[test.lis:4:5]
 3 │   match x {
 4 │     + => 1,
   ·     ┬
   ·     ╰── expected pattern
 5 │   }
   ╰────
  help: Match arms must start with a pattern · code: [parse.syntax_error]
